Code Analysis Fixed